clusters/base/vanitydomain/vanitydomain.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: $(RELEASE_ENVIRONMENT)/vanitydomain
---
apiVersion: v1
kind: Service
metadata:
  name: $(RELEASE_ENVIRONMENT)/vanitydomain
  namespace: $(RELEASE_ENVIRONMENT)/vanitydomain
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: $(RELEASE_ENVIRONMENT)/vanitydomain
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $(RELEASE_ENVIRONMENT)/vanitydomain
  namespace: $(RELEASE_ENVIRONMENT)/vanitydomain
spec:
  selector:
    matchLabels:
      app: $(RELEASE_ENVIRONMENT)/vanitydomain
  replicas: 1
  template:
    metadata:
      labels:
        app: $(RELEASE_ENVIRONMENT)/vanitydomain
    spec:
      containers:
        - name: $(RELEASE_ENVIRONMENT)/vanitydomain
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "100m"
              memory: "32Mi"
            requests:
              cpu: "50m"
              memory: "16Mi"
