clusters/base/vanitydomain/vanitydomain-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vanitydomain-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
